test-tasks/test7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: quay.io/myafk/interactive:stable
          command: ["interactive", "workloads","-t=second"]
