test-tasks/test5-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  clusterIP: None
  selector:
    app: test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test # Label selector that determines which Pods belong to the StatefulSet
                 # Must match spec: template: metadata: labels
  serviceName: "test"
  replicas: 3
  template:
    metadata:
      labels:
        app: test # Pod template's label selector
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: test
        image: quay.io/myafk/interactive:stable
        command: ["interactive", "workloads","-t=first"]
