test-tasks/test7-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  clusterIP: None
  selector:
    app: test
